# triton2pypto

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
docs/design/: ttir-to-pypto-ir-conversion.md
examples/: add_kernel.py  add_kernel_simple.py  div_kernel.py  div_kernel_simple.py  exp_kernel.py  exp_kernel_simple.py  matmul_kernel.py  matmul_kernel_simple.py  mul_kernel.py  mul_kernel_simple.py  phase1_elementwise_example.py  reduce_sum_kernel.py  reduce_sum_kernel_simple.py  run_elementwise_e2e.py  run_exp_e2e.py  run_triton_to_pypto_e2e.py  sub_kernel.py  sub_kernel_simple.py
patches/: pypto-simpler-compat.patch
scripts/: apply_pypto_patches.sh  init_submodules.sh  test_mlir_parser_standalone.py
src/: __init__.py
src/passes/: __init__.py  layout_pass.py
src/pypto_backend/: __init__.py
src/triton_adapter/: __init__.py  converter.py  exceptions.py  ir.py  ir_extractor.py  mlir_parser.py  runtime.py  ttir_converter.py
tasks/: implementation_plan.md  progress_report.md  todo.md
tests/: conftest.py  test_ir_extractor.py  test_layout_pass.py  test_mlir_parser.py  test_phase1_functional.py  test_triton_to_pypto_e2e.py  test_ttir_converter.py
