[build-system]
requires = ["scikit-build-core>=0.10.0", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "triton2pypto"
version = "0.1.0"
description = "Triton to PyPTO adapter - enables Triton kernels on Huawei AI accelerators"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["triton", "pypto", "compiler", "ai-accelerator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "triton>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/triton2pypto"
Repository = "https://github.com/yourorg/triton2pypto"

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake]
version = ">=3.15"
build-type = "RelWithDebInfo"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["triton_adapter", "pypto_backend", "passes"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"